--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,5 +24,10 @@ jobs:
         run: go mod tidy
       - name: Build project
         run: go build -o tri main.go
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-file
+          path: tri
       - name: Deploy project
         run: ls tri
