--- a/.github/workflows/print-message-wf.yml
+++ b/.github/workflows/print-message-wf.yml
@@ -8,4 +8,7 @@ jobs:
         run: echo "Hello World"
       - name: Pring goodbye
         run: echo "Goodbye"
+      - name: Display commit event
+        run: echo "${{ github.event.head_commit.message }}"
+    
   
