--- a/.github/workflows/print-message-wf.yml
+++ b/.github/workflows/print-message-wf.yml
@@ -8,6 +8,8 @@ jobs:
         run: echo "Hello World"
       - name: Pring goodbye
         run: echo "Goodbye"
+      - name: Get code
+        uses: actions/checkout@v3  
       - name: Display commit event
         run: echo "${{ github.event.head_commit.message }}"
     
