--- a/.github/workflows/print-message-wf.yml
+++ b/.github/workflows/print-message-wf.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3  
       - name: Display commit event
-        run: echo "${{ github.event.head_commit.message }}"
+        run: echo "${{ toJson(github) }}"
     
   
